force-app/zurich-base/main/default/objects/ContactRequest/ContactRequest.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>