force-app/zurich-base/main/default/objects/ContactRequest/fields/CommercialPC__c.field-meta.xml
<CustomField>
    <fullName>CommercialPC__c</fullName>
    <description>Campo que almacena el Commercial Product Code de una oferta que ha entrado por el formulario web de empresas pero no ha creado registro de Opportunity</description>
    <label>CommercialPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>