force-app/zurich-base/main/default/objects/ContactRequest/fields/GenesysCloudQueueId__c.field-meta.xml
<CustomField>
    <fullName>GenesysCloudQueueId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Condición para enrutar a una cola u otra en genesys un call me back</description>
    <label>Genesys Cloud Queue</label>
    <referenceTo>purecloud__PureCloud_Queue__c</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>