force-app/zurich-base/main/default/objects/ContactRequest/fields/GenesysInteractionId__c.field-meta.xml
<CustomField>
    <fullName>GenesysInteractionId__c</fullName>
    <description>Id de la callback generado por Genesys Cloud cuando se enruta utilizando su SDK</description>
    <label>Genesys Interaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>