force-app/zurich-base/main/default/objects/ContactRequest/fields/Preferred_Status__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Status__c</fullName>
    <formula>IF(  TEXT(Status) = &apos;Cancelled&apos;, &apos;Cancelled&apos;, IF(NOW() &gt;  PreferredContactDatetime__c , &apos;Vencido&apos;, &apos;Pendiente&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Status</label>
    <type>Text</type>
</CustomField>