force-app/zurich-base/main/default/objects/ContactRequest/fields/PreferredContactDatetime__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactDatetime__c</fullName>
    <description>Fecha y hora que le viene mejor al cliente que le llamen</description>
    <label>Preferred Contact Datetime</label>
    <type>DateTime</type>
</CustomField>