force-app/zurich-base/main/default/objects/ContactRequest/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>CASE( Status , 
    &quot;Phone&quot;, 1, 
    &quot;Callmeback&quot;, 2,
    &quot;Abandoned&quot;, 3,
    &quot;New&quot;, 4,
    &quot;Cancelled&quot;, 5,
    6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>