force-app/zurich-base/main/default/objects/ContactRequest/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto relacionado cuando se registra un abandono del formulario de Zurich empresas</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contact Requests</relationshipLabel>
    <relationshipName>Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>