force-app/zurich-base/main/default/objects/ContactRequest/fields/TechnicalPC__c.field-meta.xml
<CustomField>
    <fullName>TechnicalPC__c</fullName>
    <description>Campo que almacena el Technical Product Code de una oferta que ha entrado por el formulario web de empresas pero no ha creado registro de Opportunity</description>
    <label>TechnicalPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>