force-app/zurich-base/main/default/objects/ContactRequest/fields/WebIdentifier__c.field-meta.xml
<CustomField>
    <fullName>WebIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>Web Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>