force-app/zurich-base/main/default/objects/ContactRequest/fields/WebName__c.field-meta.xml
<CustomField>
    <fullName>WebName__c</fullName>
    <description>Nombre que se pone en el formulario web de zurich empresas para indicar que se realice un call me back. Mapeado en Genesys contra CallbackUserName</description>
    <label>Web Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>