force-app/zurich-base/main/default/objects/ContactRequest/validationRules/PreferredDateTime.validationRule-meta.xml
<ValidationRule>
    <fullName>PreferredDateTime</fullName>
    <active>true</active>
    <description>Preferred Contact Datetime cannot be more than 30 days into the future</description>
    <errorConditionFormula>DATEVALUE(PreferredContactDatetime__c) &gt; (TODAY()+30)</errorConditionFormula>
    <errorDisplayField>PreferredContactDatetime__c</errorDisplayField>
    <errorMessage>[VR ContactRequest] Preferred Contact Datetime cannot be more than 30 days into the future</errorMessage>
</ValidationRule>