force-app/zurich-base/main/default/objects/ContactRequest/listViews/ZEQueue_ContactRequest.listView-meta.xml
<ListView>
    <fullName>ZEQueue_ContactRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>Zurich Empresas</label>
    <queue>ZEQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>